Fix global input/select icon alignment and search text overlap

--- a/FrontEnd/src/Styles/Input.css
+++ b/FrontEnd/src/Styles/Input.css
@@ -153,11 +153,11 @@
 
 /* Input with Icons */
 .has-left-icon {
-  padding-left: var(--space-10);
+  padding-left: calc(var(--space-10) + var(--space-4));
 }
 
 .has-right-icon {
-  padding-right: var(--space-10);
+  padding-right: calc(var(--space-10) + var(--space-3));
 }
 
 .input-left-icon,
@@ -175,6 +175,9 @@
 
 .input-left-icon {
   left: var(--space-3);
+  width: 22px;
+  height: 22px;
+  font-size: 1rem;
 }
 
 .input-right-icon,
@@ -182,6 +185,8 @@
 .input-status-icon,
 .input-loading-spinner {
   right: var(--space-3);
+  width: 22px;
+  height: 22px;
 }
 
 .password-toggle {
@@ -348,4 +353,3 @@
 
 
 /* Add to src/Styles/Forms.css */
-
